Fix overlapping border and a type
VAN-100

--- a/src/logistration/_style.scss
+++ b/src/logistration/_style.scss
@@ -79,7 +79,7 @@ $link-blue: #23419f;
   display: block;
   color: $link-blue;
   margin-bottom: 5px;
-  margin-top: 5px;
+  margin-top: 5px !important;
   border: none;
   padding: 0;
   background: transparent;
